--- a/src/www/styles/index.scss
+++ b/src/www/styles/index.scss
@@ -23,8 +23,10 @@ html {
   // variables are updated by main.js based on theming
   --primary-color: white;
   --paper-color: white;
+  --paper-transparent: white;
   --loading-color: lightGrey;
   --background-color: white;
+  --background-transparent: white;
   --divider-color: grey;
   --text-color: black;
   --cardheader-color: lightGrey;
